statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    mongo: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      mongo: mongo
  template:
    metadata:
      labels:
        mongo: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
          - containerPort: 27017
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.2"
          limits:
            memory: "256Mi"
            cpu: "0.5"
