mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    mongo: mongo
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    mongo: mongo
