deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    application: application
spec:
  replicas: 1
  strategy: Recreate
  template:
    metadata:
      labels:
        application: application
    spec:
      containers:
      - name: application
        image: fedorovartur/afedorov-application:v1
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthx
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
      resources:
        requests:
          cpu: 0.2
          memory: 64Mi
        limits:
          cpu: 0.5
          memory: 128Mi
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    application: application
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    mongo: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      mongo: mongo
  template:
    metadata:
      labels:
        mongo: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
      resources:
        requests:
          cpu: 0.2
          memory: 128Mi
        limits:
          cpu: 0.5
          memory: 256Mi
      imagePullSecrets:
      - name: regcred
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: afedorov.application.com
    http:
      paths:
      - path: /
        backend:
          serviceName: application
          servicePort: 80
